--- a/index.html
+++ b/index.html
@@ -7,7 +7,24 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+   <div class="dtgital-clock">
+    <div class="time">
+        <div class="left-side">
+           <span id="hours">00</span>
+        </div>
+          <div class="right-side">
+            <div class="right-top">
+                <span id="dots">:</span>
+                <span id="minutes">00</span>
+            </div>
+            <div class="right-down">
+                <span id="period">PM</span>
+                <span id="seconds">00</span>
+            </div>
+          </div>
+    </div>
+
+   </div>
 </body>
 <script src="clock"></script>
 </html>
