--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-   <div class="dtgital-clock">
+   <div class="digital-clock">
     <div class="time">
         <div class="left-side">
            <span id="hours">00</span>
@@ -25,6 +25,35 @@
     </div>
 
    </div>
+   <script >
+    function  clock(){
+    let hours =  document.getElementById('hours');
+    
+    let minutes =  document.getElementById('minutes');
+    let seconds =  document.getElementById('seconds');
+    let period =  document.getElementById('period');
+    let h=  new Date().getHours();
+    let m=  new Date().getMinutes();
+    let s=  new Date().getSeconds();
+    let ampm =  h >= 12 ?  "AM" : "PM";
+    if(h>12){
+        h=h-12;
+    }
+  h=(h<10) ? "0"+h :h;
+  m=(m<10) ? "0"+m :m;
+  s=(s<10) ? "0"+s :s;
+
+    hours.innerHTML=h;
+    minutes.innerHTML=m;
+    seconds.innerHTML=s;
+    period.innerHTML=ampm;
+
+   
+};
+
+setInterval(clock, 1000);
+
+   </script>
 </body>
-<script src="clock"></script>
+
 </html>
