fix some problem

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     let h=  new Date().getHours();
     let m=  new Date().getMinutes();
     let s=  new Date().getSeconds();
-    let ampm =  h >= 12 ?  "AM" : "PM";
+    let ampm =  h >= 12 ?  "PM" : "AM";
     if(h>12){
         h=h-12;
     }
